--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Published Date", name: "date", widget: "datetime" }
+      - { label: "Description", name: "description", widget: "text" }
       - {
           label: "Categories",
           name: "categories",
