--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ media_folder: "src/images/uploads" # Media files will be stored in the repo unde
 
 collections:
   - name: "recipes"
-    label: "Recipes"
+    label: "Recipe"
     folder: "_posts/recipes"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
